--- a/app/src/main/res/layout/career_statistics_row.xml
+++ b/app/src/main/res/layout/career_statistics_row.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorPrimary"
+
         app:cardCornerRadius="2dp"
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="true"
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@color/colorPrimary"
+
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="2dp">
@@ -44,11 +44,25 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
+                        android:layout_gravity="center|start"
+                        android:gravity="center|start"
                         android:orientation="horizontal">
+                        <TextView
+                            android:background="@drawable/black_border"
+                            android:id="@+id/txtplayerName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center|start"
+                            android:gravity="center|start"
+                            android:text="Player Name "
+                            android:textAllCaps="true"
+                            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            tools:targetApi="lollipop" />
 
                         <com.facebook.drawee.view.SimpleDraweeView
+                            android:visibility="gone"
                             android:id="@+id/imgplayername"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
@@ -59,20 +73,7 @@
 
                         </com.facebook.drawee.view.SimpleDraweeView>
 
-                        <TextView
-                            android:id="@+id/txtplayerName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginLeft="5dp"
-                            android:gravity="center|start"
-                            android:text="Player Name "
-                            android:textAllCaps="true"
-                            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                            android:textColor="@android:color/white"
-                            android:textStyle="normal"
-                            tools:targetApi="lollipop" />
+
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -85,7 +86,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-
+                            android:textColor="@android:color/black"
                             android:id="@+id/txtInnings"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
@@ -93,7 +94,7 @@
                             android:drawablePadding="5dp"
                             android:gravity="center|start"
                             android:padding="5dp"
-                            android:text="Innings "
+                            android:text=" Innings "
                             android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent"
                             android:textStyle="bold"
                             tools:targetApi="lollipop" />
@@ -355,7 +356,7 @@
                                 android:layout_gravity="center"
                                 android:layout_weight="0.2"
                                 android:padding="8dp"
-                                android:text="Not Outs"
+                                android:text="NOT Out Status"
                                 android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent"
                                 android:textColor="@android:color/white"
                                 android:textStyle="normal" />
@@ -653,7 +654,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="0dp"
-                        android:background="@drawable/buttonstyle"
+
                         android:orientation="horizontal">
 
                         <com.facebook.shimmer.ShimmerFrameLayout
