--- a/app/src/main/res/layout/recycler_view_item_allteam_row.xml
+++ b/app/src/main/res/layout/recycler_view_item_allteam_row.xml
@@ -61,6 +61,21 @@
             android:text="DHE"
             android:textColor="@color/colorPrimary"
             android:textSize="12sp" />
+
+        <Button
+            android:layout_gravity="end"
+            android:visibility="visible"
+            android:id="@+id/btnDeleteTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ivThumb"
+            android:background="@drawable/buttonstylered"
+            android:padding="5dp"
+            android:text="Delete"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
