--- a/app/src/main/res/layout/activity_indivisual_match_detail_adding.xml
+++ b/app/src/main/res/layout/activity_indivisual_match_detail_adding.xml
@@ -32,7 +32,50 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+                    <LinearLayout
+                        android:id="@+id/llteamdhe"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:orientation="vertical"
+                        android:visibility="visible">
 
+
+                        <TextView
+                            android:id="@+id/txtteamplayerdhe"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:text="Select Dhe team player."
+                            android:textColor="@color/black"
+                            android:textStyle="normal"
+                            android:visibility="visible">
+
+                        </TextView>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/spinner_border"
+                            android:orientation="vertical"
+                            android:visibility="visible">
+
+                            <androidx.appcompat.widget.AppCompatSpinner
+                                android:id="@+id/spnteamplayerdhe"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:backgroundTint="@color/black"
+                                android:clickable="false"
+                                android:foregroundTint="@color/black"
+                                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">
+
+                            </androidx.appcompat.widget.AppCompatSpinner>
+                        </LinearLayout>
+
+
+                    </LinearLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -107,50 +150,7 @@
 
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/llteamdhe"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:orientation="vertical"
-                        android:visibility="visible">
 
-
-                        <TextView
-                            android:id="@+id/txtteamplayerdhe"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="Select Dhe team player."
-                            android:textColor="@color/black"
-                            android:textStyle="normal"
-                            android:visibility="visible">
-
-                        </TextView>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/spinner_border"
-                            android:orientation="vertical"
-                            android:visibility="visible">
-
-                            <androidx.appcompat.widget.AppCompatSpinner
-                                android:id="@+id/spnteamplayerdhe"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:backgroundTint="@color/black"
-                                android:clickable="false"
-                                android:foregroundTint="@color/black"
-                                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">
-
-                            </androidx.appcompat.widget.AppCompatSpinner>
-                        </LinearLayout>
-
-
-                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/llOpponent"
@@ -784,7 +784,7 @@
                         android:background="@drawable/edtbg"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Add Match Record for Govind"
+                        android:text=""
                         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
