--- a/app/src/main/res/layout/career_statistics_row.xml
+++ b/app/src/main/res/layout/career_statistics_row.xml
@@ -8,9 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        app:cardCornerRadius="2dp"
-        app:cardElevation="2dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,13 +29,13 @@
 
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="2dp">
+                android:padding="0dp">
 
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_margin="0dp"
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:padding="0dp">
@@ -47,17 +46,19 @@
                         android:layout_gravity="center|start"
                         android:gravity="center|start"
                         android:orientation="horizontal">
+
                         <TextView
-                            android:background="@drawable/black_border"
+                            android:paddingStart="2dp"
                             android:id="@+id/txtplayerName"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center|start"
+                            android:background="@color/yellowlight"
                             android:gravity="center|start"
                             android:text="Player Name "
                             android:textAllCaps="true"
                             android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                            android:textColor="@color/white"
+                            android:textColor="#BF360C"
                             android:textStyle="bold"
                             tools:targetApi="lollipop" />
 
@@ -79,13 +80,15 @@
 
 
                     <LinearLayout
-                        android:layout_marginTop="2dp"
+                        android:layout_marginTop="0dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/edit_text_borderdash"
+                        android:background="@color/yellowlight"
                         android:orientation="horizontal">
 
                         <TextView
+                            android:background="@drawable/spinner_border"
+
                             android:textColor="@android:color/black"
                             android:id="@+id/txtInnings"
                             android:layout_width="0dp"
@@ -121,7 +124,7 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
+                        android:layout_margin="0dp"
                         android:background="@color/yellowlight"
                         android:orientation="vertical">
 
@@ -132,7 +135,7 @@
                             android:fontFamily="@font/cabin_sketch"
                             android:gravity="center"
                             android:text="Batting career"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             android:textColor="@color/white"
                             android:textStyle="bold">
 
@@ -382,7 +385,7 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
+                        android:layout_margin="0dp"
                         android:background="@color/yellowlight"
                         android:orientation="vertical">
 
@@ -393,7 +396,7 @@
                             android:fontFamily="@font/cabin_sketch"
                             android:gravity="center"
                             android:text="Bowling  career"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             android:textColor="@color/white"
                             android:textStyle="bold">
 
@@ -650,18 +653,19 @@
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <LinearLayout
+                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:id="@+id/llappstatus"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="0dp"
-
                         android:orientation="horizontal">
 
                         <com.facebook.shimmer.ShimmerFrameLayout
                             android:id="@+id/shimmer_view_container1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="1dp"
+                            android:layout_marginTop="0dp"
                             android:background="@drawable/black_border"
                             android:elevation="4dp"
                             app:shimmer_base_alpha="1"
