1.About us 2. In app updated.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,7 @@
 
 
                     <LinearLayout
+                        android:background="@color/colorPrimary"
                         android:id="@+id/llmain"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -169,13 +170,13 @@
                             android:layout_height="wrap_content"
                             android:padding="2dp"
                             android:text="Upcoming Birthday:-"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/white"
                             android:textStyle="bold" />
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="5dp"
+                            android:layout_margin="1dp"
                             android:background="@drawable/edit_text_borderdash"
                             android:gravity="center"
                             android:orientation="horizontal"
@@ -213,7 +214,6 @@
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="1dp"
                             android:layout_marginTop="5dp"
                             android:background="@drawable/edit_text_borderdash"
                             android:orientation="horizontal"
@@ -229,9 +229,10 @@
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:layout_width="wrap_content"
+                                    android:gravity="center|start"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:padding="2dp"
+                                    android:padding="0dp"
                                     android:text="Highest Scorer"
                                     android:textColor="@color/colorPrimary"
                                     android:textStyle="bold" />
@@ -275,7 +276,8 @@
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:layout_width="wrap_content"
+
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:padding="2dp"
                                     android:text="Most Wicket Taker:"
