--- a/app/src/main/res/layout/activity_indivisual_match_detail_adding.xml
+++ b/app/src/main/res/layout/activity_indivisual_match_detail_adding.xml
@@ -396,11 +396,10 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
                                 android:layout_marginLeft="6dp"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="0dp"
                                 android:layout_marginEnd="8dp"
                                 android:layout_marginRight="16dp"
-                                android:layout_marginBottom="5dp"
-                                android:text="Select Batsman status"
+                                android:text="Select ( Out/not-out ) Batsman status"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                 android:textColor="@color/black"
                                 android:textStyle="normal"
@@ -722,7 +721,7 @@
                                         android:enabled="true"
                                         android:hint="Do Run Out"
                                         android:imeOptions="actionNext"
-                                        android:inputType="textPersonName"
+                                        android:inputType="numberSigned"
                                         android:maxLength="2"
                                         android:textColor="@color/black"
                                         android:textSize="12sp"
