--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,12 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:gravity="center|top"
+        android:gravity="center"
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
             app:civ_border_width="2dp"
-            app:civ_border_color="@color/blacklight"
+            app:civ_border_color="@color/white"
             android:src="@mipmap/ic_launcher_round"
             android:id="@+id/imageView9"
             android:layout_width="100dp"
@@ -312,6 +312,18 @@
             android:layout_height="wrap_content"
             ads:adSize="BANNER"
             ads:adUnitId="@string/banner_ad_unit_id"/>
+        <TextView
+            android:layout_gravity="bottom"
+            android:id="@+id/txtversion"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center|bottom"
+            android:text=""
+            android:layout_marginBottom="5dp"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@color/colorPrimary"
+            />
 
 
     </LinearLayout>
