1. fixed error of inserting score in individual.

--- a/app/src/main/res/layout/activity_indivisual_match_detail_adding.xml
+++ b/app/src/main/res/layout/activity_indivisual_match_detail_adding.xml
@@ -253,12 +253,11 @@
                                         android:id="@+id/edtScored"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:clickable="false"
                                         android:drawableStart="@drawable/age"
                                         android:drawableLeft="@drawable/age"
                                         android:drawablePadding="16dp"
-                                        android:editable="true"
-                                        android:enabled="true"
+                                        android:digits="0123456789"
+                                        android:ems="3"
                                         android:hint="Scored"
                                         android:imeOptions="actionNext"
                                         android:inputType="numberSigned"
@@ -335,10 +334,10 @@
                                         android:drawableStart="@drawable/age"
                                         android:drawableLeft="@drawable/age"
                                         android:drawablePadding="16dp"
-                                        android:editable="true"
                                         android:ems="2"
                                         android:enabled="true"
                                         android:hint="4s"
+                                        android:digits="0123456789"
                                         android:imeOptions="actionNext"
                                         android:inputType="numberSigned"
                                         android:maxEms="2"
@@ -367,14 +366,11 @@
                                         android:id="@+id/edt6s"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:clickable="false"
                                         android:digits="0123456789"
                                         android:drawableStart="@drawable/age"
                                         android:drawableLeft="@drawable/age"
                                         android:drawablePadding="16dp"
-                                        android:editable="true"
                                         android:ems="2"
-                                        android:enabled="true"
                                         android:hint="6s"
                                         android:imeOptions="actionNext"
                                         android:inputType="numberSigned"
