--- a/app/src/main/res/layout/plyr_history_row.xml
+++ b/app/src/main/res/layout/plyr_history_row.xml
@@ -651,12 +651,12 @@
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <LinearLayout
-                        android:id="@+id/llappstatus"
+                        android:id="@+id/llrecordDelete"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="0dp"
                         android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <com.facebook.shimmer.ShimmerFrameLayout
                             android:id="@+id/shimmer_view_container1"
