--- a/app/src/main/res/layout/recycler_view_itemrecentmatchimg_row.xml
+++ b/app/src/main/res/layout/recycler_view_itemrecentmatchimg_row.xml
@@ -47,6 +47,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:visibility="invisible"
             android:id="@+id/txtMatchStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
