--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -290,7 +290,7 @@
 
 
         <TextView
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/button2"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
